@@ -260,6 +260,9 @@ static void on_state_enter(h2_stream *stream)
 
 static void on_state_event(h2_stream *stream, h2_stream_event_t ev) 
 {
+    if (H2_SEV_IN_DATA_PENDING == ev) {
+        h2_stream_flush_input(stream);
+    }
     if (stream->monitor && stream->monitor->on_state_event) {
         stream->monitor->on_state_event(stream->monitor->ctx, stream, ev);
     }
